# health-sus-agent

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: causal_rigor.mdc  data_science_depth.mdc
analysis/h1_demand/: FINDINGS.md  metrics.json
analysis/h2_dengue/: FINDINGS.md  metrics.json
analysis/kidney_stone/: FINDINGS.md  feature_names.json  feature_names_clean.json  feature_names_patient.json  metrics.json  ml_metrics.json  ml_metrics_clean.json  ml_patient_metrics.json  simulation_results.json
analysis/raio_x/: a1_metrics.json  a7_metrics.json  ml_metrics.json
configs/h2_dengue/: experiment.yaml
docs/: ARCHITECTURE.md  CROSS_DOMAIN_HYPOTHESES.md  DATASETS.md  DATA_DICTIONARY.md  EVALUATION.md  ML_MODELS.md  PRD_LANGGRAPH_AGENT.md  PROJECT_CHECKLIST.md  ROADMAP.md  START_HERE.md
docs/agent/: ARCHITECTURE.md  LESSONS_LEARNED.md  ROADMAP.md  START_HERE.md
docs/archive/: FINDINGS.md
eval/: README.md  __init__.py  compare_results.py  critic_dataset.py  run_critic_eval.py  run_sweep.sh
experiments/kidney/: EXPERIMENT.md  PLAN.md  README.md
experiments/respiratory_failure/: EXPERIMENT.md  PLAN.md  README.md
scripts/: download_kidney_data.py  download_sia.py  run_investigation.py
skills/: data_loading.md  eda_patterns.md  ml_modeling.md  report_writing.md  statistical_tests.md  sus_domain.md  sus_gotchas.md
src/: cli.py  settings.py
src/agent/: __init__.py  accumulator.py  artifact_store.py  config.py  context.py  critic.py  engine.py  planner.py  runner.py  skill.py  spine.py  state.py  tracer.py  tree.py
src/application/: download_pipeline.py  progress.py
src/domain/: models.py  ports.py
tests/agent/: test_accumulator.py  test_critic.py  test_engine.py  (+6 more)
(+145 files in other folders)
